--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,12 @@ html {
   overflow-x: hidden;
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
